[package]
name = "polkalite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.35.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.112"
toml = "0.8.8"
hex-literal = "0.4.1"
blake2 = "0.10.6"
libp2p = { vesrion = "0.53.2", features = ["noise", "ping", "tcp", "tokio", "yamux"] }
